<resources>

    <string name="app_name">HomeGuard</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="brief_start_delay">Start Delay</string>
    <string name="detailed_start_delay">Delay of starting movement detection after clicking on start button.</string>
    <string name="brief_warning_delay">Warning delay</string>
    <string name="detailed_warning_delay">Delay of warning after movement detection.</string>
    <string name="brief_alarm_delay">Alarm delay</string>
    <string name="detailed_alarm_delay">Delay of alarm after movement detection.</string>
    <string name="brief_email_delay">Email sending delay</string>
    <string name="detailed_email_delay">Delay of email sending after movement detection.</string>
    <string name="brief_sms_delay">Sms sending delay</string>
    <string name="detailed_sms_delay">Delay of sms sending after movement detection.</string>
    <string name="start_button_text">Start</string>
    <string name="title_activity_email_settings">EmailSettingsActivity</string>
    <string name="brief_sending_email">Sending email address</string>
    <string name="brief_password">Password</string>
    <string name="brief_receiving_email">Receiving email address</string>
    <string name="brief_receiving_number">Receiving number</string>
    <string name="brief_sms_text">Text</string>
    <string name="save_settings">Save settings</string>
    <string name="title_activity_sms_settings">SmsSettingsActivity</string>

</resources>